--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@
 
 .main__button {
   padding: 10px 20px;
+  margin: 20px 20px;
   color: #fff;
   background-color: transparent;
   border: 1px solid #30475e;
