--- a/css/hobby.css
+++ b/css/hobby.css
@@ -63,6 +63,6 @@
   border: 1px solid #fff;
 }
 
-.hobby__button--theme2 {
+.hobby__button--themeLight {
   background-color: rgba(82, 82, 82, 0.5);
 }
